[gd_scene load_steps=17 format=3 uid="uid://v7bt0i4rho2y"]

[ext_resource type="Script" path="res://Scripts/level_switcher.gd" id="1_3gkv4"]
[ext_resource type="FontFile" uid="uid://d3jmy4hwjbvtr" path="res://UI/Fonts/Dream MMA.ttf" id="2_88vei"]
[ext_resource type="Texture2D" uid="uid://m8c3ex56nibt" path="res://UI/images/GUI/TitlePanel01.png" id="2_gqayu"]
[ext_resource type="FontFile" uid="uid://ciuabl015y5ch" path="res://UI/Fonts/coolvetica rg.otf" id="3_oxt0h"]
[ext_resource type="Texture2D" uid="uid://h4nmmoaeakhw" path="res://UI/images/GUI/Slider02.png" id="4_mk5me"]
[ext_resource type="Material" uid="uid://cy1bnmkbcr3j7" path="res://Materials/Scrolling Texture.tres" id="4_ri64u"]
[ext_resource type="Texture2D" uid="uid://c6pvpigh1vyvy" path="res://UI/images/GUI/HoverButton11.png" id="7_xg0ri"]
[ext_resource type="Theme" uid="uid://dq2bcxrdylvqh" path="res://UI/Script/LevelSwitcher.tres" id="7_y5if3"]
[ext_resource type="Texture2D" uid="uid://d2vtkaw7cye34" path="res://UI/images/GUI/Button11.png" id="8_7oeaf"]
[ext_resource type="FontFile" uid="uid://bpn5ov4sveth8" path="res://Materials/coolvetica rg.otf" id="10_gdstc"]
[ext_resource type="AudioStream" uid="uid://b2ixuguv5socj" path="res://Audio/SFX/WAV/Minimalist7.wav" id="11_641xx"]
[ext_resource type="AudioStream" uid="uid://dpcfa6aw4eers" path="res://Audio/SFX/WAV/Wood Block3.wav" id="12_csj4u"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ca0yi"]
texture = ExtResource("7_xg0ri")
expand_margin_left = 13.0
expand_margin_top = 6.0
expand_margin_right = 13.0
expand_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eedhe"]
texture = ExtResource("8_7oeaf")
expand_margin_left = 13.0
expand_margin_top = 6.0
expand_margin_right = 13.0
expand_margin_bottom = 6.0

[sub_resource type="Gradient" id="Gradient_iamg4"]
colors = PackedColorArray(0, 1, 0.95, 0.635294, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ywm16"]
gradient = SubResource("Gradient_iamg4")
fill = 1
fill_from = Vector2(0.487179, 0.512821)
fill_to = Vector2(0.978632, 0.226496)

[node name="Level Switcher" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3gkv4")

[node name="Backgroud" type="Control" parent="."]
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect2" type="ColorRect" parent="Backgroud"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.57079
scale = Vector2(0.632215, -2.1031)
color = Color(0, 0, 0, 0.647059)

[node name="ColorRect" type="ColorRect" parent="Backgroud/ColorRect2"]
z_index = -1
material = ExtResource("4_ri64u")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Back Button" type="Button" parent="."]
layout_mode = 1
offset_right = 40.0
offset_bottom = 36.0
scale = Vector2(1.64351, 1.67211)
theme_override_font_sizes/font_size = 26
icon = ExtResource("4_mk5me")

[node name="Tutorial button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -26.9999
offset_right = 227.0
offset_bottom = 13.0001
grow_vertical = 0
scale = Vector2(0.577088, 0.577088)
theme_override_fonts/font = ExtResource("2_88vei")
theme_override_font_sizes/font_size = 31
theme_override_styles/hover = SubResource("StyleBoxTexture_ca0yi")
theme_override_styles/normal = SubResource("StyleBoxTexture_eedhe")
text = "tutorial"

[node name="level 1" type="Button" parent="."]
layout_mode = 0
offset_left = 179.0
offset_top = 166.0
offset_right = 514.0
offset_bottom = 371.0
scale = Vector2(0.286127, 0.303297)
theme = ExtResource("7_y5if3")
theme_override_fonts/font = ExtResource("2_88vei")
text = "1 "

[node name="Level1 highlighter" type="TextureRect" parent="level 1"]
z_index = -2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.5
offset_top = -178.5
offset_right = -112.5
offset_bottom = -110.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5.25373, 5.06505)
texture = SubResource("GradientTexture2D_ywm16")

[node name="Status" type="Label" parent="level 1"]
layout_mode = 0
offset_top = 257.174
offset_right = 170.0
offset_bottom = 334.175
scale = Vector2(0.798462, 0.798462)
theme_override_fonts/font = ExtResource("10_gdstc")
theme_override_font_sizes/font_size = 56
text = "Status"

[node name="Time" type="Label" parent="level 1"]
layout_mode = 0
offset_top = 319.819
offset_right = 170.0
offset_bottom = 396.82
scale = Vector2(0.894873, 0.894873)
theme_override_fonts/font = ExtResource("3_oxt0h")
theme_override_font_sizes/font_size = 56
text = "Time"

[node name="level 2" type="Button" parent="."]
layout_mode = 0
offset_left = 373.0
offset_top = 166.0
offset_right = 812.0
offset_bottom = 371.0
scale = Vector2(0.218506, 0.302148)
theme = ExtResource("7_y5if3")
theme_override_fonts/font = ExtResource("2_88vei")
text = "2 "

[node name="Level1 highlighter" type="TextureRect" parent="level 2"]
z_index = -2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -237.5
offset_top = -175.5
offset_right = -146.5
offset_bottom = -108.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5.25373, 5.06505)
texture = SubResource("GradientTexture2D_ywm16")

[node name="Status" type="Label" parent="level 2"]
layout_mode = 0
offset_top = 257.174
offset_right = 170.0
offset_bottom = 334.175
scale = Vector2(0.982148, 0.798462)
theme_override_fonts/font = ExtResource("10_gdstc")
theme_override_font_sizes/font_size = 56
text = "Status"

[node name="Time" type="Label" parent="level 2"]
layout_mode = 0
offset_top = 319.819
offset_right = 170.0
offset_bottom = 396.82
scale = Vector2(0.942828, 0.763278)
theme_override_fonts/font = ExtResource("3_oxt0h")
theme_override_font_sizes/font_size = 56
text = "Time"

[node name="level 3" type="Button" parent="."]
layout_mode = 0
offset_left = 562.0
offset_top = 166.0
offset_right = 1001.0
offset_bottom = 371.0
scale = Vector2(0.221055, 0.305672)
theme = ExtResource("7_y5if3")
theme_override_fonts/font = ExtResource("2_88vei")
text = "3 "

[node name="Level1 highlighter" type="TextureRect" parent="level 3"]
z_index = -2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -242.5
offset_top = -174.5
offset_right = -147.5
offset_bottom = -108.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5.25373, 5.06505)
texture = SubResource("GradientTexture2D_ywm16")

[node name="Status" type="Label" parent="level 3"]
layout_mode = 0
offset_top = 257.174
offset_right = 170.0
offset_bottom = 334.175
scale = Vector2(0.982148, 0.798462)
theme_override_fonts/font = ExtResource("10_gdstc")
theme_override_font_sizes/font_size = 56
text = "Status"

[node name="Time" type="Label" parent="level 3"]
layout_mode = 0
offset_top = 319.819
offset_right = 170.0
offset_bottom = 396.82
scale = Vector2(1.12379, 0.763278)
theme_override_fonts/font = ExtResource("3_oxt0h")
theme_override_font_sizes/font_size = 56
text = "Time"

[node name="level 4" type="Button" parent="."]
layout_mode = 0
offset_left = 749.0
offset_top = 166.0
offset_right = 1180.0
offset_bottom = 371.0
scale = Vector2(0.219306, 0.303253)
theme = ExtResource("7_y5if3")
theme_override_fonts/font = ExtResource("2_88vei")
text = "4 "

[node name="Level1 highlighter" type="TextureRect" parent="level 4"]
z_index = -2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -242.5
offset_top = -171.5
offset_right = -147.5
offset_bottom = -105.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5.25373, 5.06505)
texture = SubResource("GradientTexture2D_ywm16")

[node name="Status" type="Label" parent="level 4"]
layout_mode = 0
offset_top = 257.174
offset_right = 170.0
offset_bottom = 334.175
scale = Vector2(1.01015, 0.798462)
theme_override_fonts/font = ExtResource("10_gdstc")
theme_override_font_sizes/font_size = 56
text = "Status"

[node name="Time" type="Label" parent="level 4"]
layout_mode = 0
offset_top = 319.819
offset_right = 170.0
offset_bottom = 396.82
scale = Vector2(1.1252, 0.763278)
theme_override_fonts/font = ExtResource("3_oxt0h")
theme_override_font_sizes/font_size = 56
text = "Time"

[node name="level 5" type="Button" parent="."]
layout_mode = 0
offset_left = 938.0
offset_top = 166.0
offset_right = 1379.0
offset_bottom = 371.0
scale = Vector2(0.21949, 0.303509)
theme = ExtResource("7_y5if3")
theme_override_fonts/font = ExtResource("2_88vei")
text = "5 "

[node name="Level1 highlighter" type="TextureRect" parent="level 5"]
z_index = -2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.5
offset_top = -168.5
offset_right = -145.5
offset_bottom = -103.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5.25373, 5.06505)
texture = SubResource("GradientTexture2D_ywm16")

[node name="Status" type="Label" parent="level 5"]
layout_mode = 0
offset_top = 257.174
offset_right = 170.0
offset_bottom = 334.175
scale = Vector2(1.16439, 0.798462)
theme_override_fonts/font = ExtResource("10_gdstc")
theme_override_font_sizes/font_size = 56
text = "Status"

[node name="Time" type="Label" parent="level 5"]
layout_mode = 0
offset_top = 319.819
offset_right = 170.0
offset_bottom = 396.82
scale = Vector2(1.12509, 0.763278)
theme_override_fonts/font = ExtResource("3_oxt0h")
theme_override_font_sizes/font_size = 56
text = "Time"

[node name="level 6" type="Button" parent="."]
layout_mode = 0
offset_left = 175.0
offset_top = 319.0
offset_right = 616.0
offset_bottom = 524.0
scale = Vector2(0.21949, 0.303509)
theme = ExtResource("7_y5if3")
theme_override_fonts/font = ExtResource("2_88vei")
text = "6 "

[node name="Level1 highlighter" type="TextureRect" parent="level 6"]
z_index = -2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.5
offset_top = -168.5
offset_right = -145.5
offset_bottom = -103.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5.25373, 5.06505)
texture = SubResource("GradientTexture2D_ywm16")
metadata/_edit_lock_ = true

[node name="Status" type="Label" parent="level 6"]
layout_mode = 0
offset_top = 257.174
offset_right = 170.0
offset_bottom = 334.175
scale = Vector2(1.16439, 0.798462)
theme_override_fonts/font = ExtResource("10_gdstc")
theme_override_font_sizes/font_size = 56
text = "Status"

[node name="Time" type="Label" parent="level 6"]
layout_mode = 0
offset_top = 319.819
offset_right = 170.0
offset_bottom = 396.82
scale = Vector2(1.12509, 0.763278)
theme_override_fonts/font = ExtResource("3_oxt0h")
theme_override_font_sizes/font_size = 56
text = "Time"

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="Top" type="Sprite2D" parent="Control"]
position = Vector2(-6, 68)
texture = ExtResource("2_gqayu")

[node name="Button" type="Button" parent="Control/Top"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = -1.525
anchor_right = 0.5
anchor_bottom = -1.525
offset_left = -233.0
offset_top = -21.5
offset_right = 150.0
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.346645, 0.346645)
size_flags_horizontal = 4
theme_type_variation = &"FlatButton"
theme_override_fonts/font = ExtResource("3_oxt0h")
theme_override_font_sizes/font_size = 63
text = "Level switcher
"
metadata/_edit_use_anchors_ = true

[node name="HoverButton11" type="Sprite2D" parent="Control/Top"]
z_index = -1
position = Vector2(-1, -27)
scale = Vector2(3.16191, 4.02381)
texture = ExtResource("8_7oeaf")

[node name="Node" type="Node" parent="."]

[node name="Hover" type="AudioStreamPlayer2D" parent="Node"]
stream = ExtResource("11_641xx")
volume_db = 20.0
panning_strength = 0.0
bus = &"SoundEffects"

[node name="Select" type="AudioStreamPlayer2D" parent="Node"]
stream = ExtResource("12_csj4u")
volume_db = 5.66
pitch_scale = 1.2
panning_strength = 0.0
bus = &"SoundEffects"

[connection signal="mouse_entered" from="Back Button" to="." method="_on_back_button_mouse_entered"]
[connection signal="pressed" from="Back Button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Tutorial button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="level 1" to="." method="_on_level_1_mouse_entered"]
[connection signal="pressed" from="level 1" to="." method="_on_level_1_pressed"]
[connection signal="mouse_entered" from="level 2" to="." method="_on_level_2_mouse_entered"]
[connection signal="pressed" from="level 2" to="." method="_on_level_2_pressed"]
[connection signal="mouse_entered" from="level 3" to="." method="_on_level_3_mouse_entered"]
[connection signal="pressed" from="level 3" to="." method="_on_level_3_pressed"]
[connection signal="mouse_entered" from="level 4" to="." method="_on_level_4_mouse_entered"]
[connection signal="pressed" from="level 4" to="." method="_on_level_4_pressed"]
[connection signal="mouse_entered" from="level 5" to="." method="_on_level_5_mouse_entered"]
[connection signal="pressed" from="level 5" to="." method="_on_level_5_pressed"]
[connection signal="mouse_entered" from="level 6" to="." method="_on_level_5_mouse_entered"]
[connection signal="pressed" from="level 6" to="." method="_on_level_6_pressed"]
